Consolidate fapolicyd-cli return codes
All return codes can be mapped to simple numeric tiers:

0 success
1 Generic/unspecified failure
2 CLI / usage error
3 Path / configuration error
4 Database / LMDB error
5 Rule / filter error
6 Daemon / IPC error
7 Filesystem / I-O / permission error
8 Internal software / OOM
9 No-op / Not-found / Nothing to do

Added a shared CLI exit status enum and updated trust file add/delete/update helpers to propagate categorized outcomes, including filter and I/O conditions.

Mapped fapolicyd-cli operations to standardized exit codes across reload/status flows, watch_fs and ignore_mounts scans, trust database checks, and argument parsing to distinguish IPC, configuration, I/O, internal, and benign no-op situations.

Documented the full return code matrix in the fapolicyd-cli(8) man page for scripting reference.

--- a/doc/fapolicyd-cli.8
+++ b/doc/fapolicyd-cli.8
@@ -76,6 +76,38 @@ Notifies fapolicyd to perform a reload of the rules.
 .TP
 .B \-\-verbose
 Only for the \-\-check-ignore_mounts, print a list of files that do not pass inspection.
+.SH RETURN CODES
+The following exit status values are used for error reporting and scripting:
+.TP
+.B 0  Success
+Normal completion.
+.TP
+.B 1  Generic/unspecified failure
+Fallback for errors that do not map to a more specific category.
+.TP
+.B 2  CLI/usage error
+Incorrect options or argument counts.
+.TP
+.B 3  Path/configuration error
+Failed \fBrealpath\fP lookups, malformed configuration, or invalid mount overrides.
+.TP
+.B 4  Database/LMDB error
+Trust database operations failed (creation, open, cursor traversal, or deletion).
+.TP
+.B 5  Rule/filter error
+Filter initialization or parsing problems, including \fB%languages\fP handling.
+.TP
+.B 6  Daemon/IPC error
+Communication with the daemon failed (FIFO permissions/shape issues, missing PID, or status report timeouts).
+.TP
+.B 7  Filesystem/I\-O/permission error
+Problems opening, stat'ing, or writing files (including rule files or the trust database on disk).
+.TP
+.B 8  Internal software/OOM
+Allocation failures or other unexpected internal errors.
+.TP
+.B 9  No\-op/Not\-found/Nothing to do
+Operations that completed without making changes, such as attempting to update, delete, or add entries that were not present.
 .SH "SEE ALSO"
 .BR fapolicyd (8),
 .BR fapolicyd.rules (5),
