--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Add new magic detections and drop a lot of old rules
 - Performance improvement looking up mime-types
 - Various clode cleanups, hardening, and performance optimizing
+- Classify ELF files with an unknown interpreter as application/x-bad-elf
 
 1.4.2
 - Correct identification of kworker threads
