--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Performance improvement looking up mime-types
 - Various clode cleanups, hardening, and performance optimizing
 - Classify ELF files with an unknown interpreter as application/x-bad-elf
+- Consolidate the fapolicyd-cli return codes
 
 1.4.2
 - Correct identification of kworker threads
