Increase path for the ELF interpreter
Modern OS like NixOS can have long paths for everything. Increase the size of
the buffer for reading in the interpreter. This does not address adding more
interpreters to accomodate more distributions. But make it possible.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 - Update the trust-db filter rules to add and drop some things
 - Add new magic detections and drop a lot of old rules
 - Performance improvement looking up mime-types
-- Various clode cleanups, hardening, and performance optimizing
+- Various code cleanups, hardening, and performance optimizing
 - Classify ELF files with an unknown interpreter as application/x-bad-elf
 - Consolidate the fapolicyd-cli return codes
 
